Fix spacing between duration inputs

--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,7 @@ li.active {
 
 .timer-inputs-wrap {
   display: flex;
+  gap: 1rem;
   justify-content: space-between;
 }
 
